# genfile

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Makefile  README  configure.ac  release.sh  test.py
DEBIAN/: control
debian/: README.Debian  changelog  control  copyright
src/: Makefile.am  arg.c  arg.h  bool.h  gen.c  gen.h  main.c
src/arg/: arg.c  arg.h  arg_generate.c  arg_generate.h  arg_verify.c  arg_verify.h
test/: test.py
